--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 body {
-    font-family: Arial, sans-serif;
+    font-family: Noto Sans, sans-serif;
     margin: 0;
     padding: 0;
     background: url('recipe.jpg') no-repeat center center fixed;
